k8s/02-deployment.yml
# k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiz-webapp
  labels:
    app: wiz-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiz-webapp
  template:
    metadata:
      labels:
        app: wiz-webapp
    spec:
      serviceAccountName: wiz-app-sa # Fulfills cluster-wide admin requirement
      containers:
      - name: webapp
        image: gcr.io/clgcporg10-181/wiz-webapp:latest
        ports:
        - containerPort: 8080 # UPDATED from the README
